Setup HTML & CSS files

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <section class="players-section">
+    <section class="player-section">
       <article class="human-player">
         <p>👨</p>
         <p>Human</p>
