--- a/index.html
+++ b/index.html
@@ -7,43 +7,49 @@
     <link href="styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <section class="player-section">
-      <article class="human-player">
-        <p>👨</p>
-        <p>Human</p>
-        <p>Wins:</p>
-      </article>
-      <article class="computer-player">
-        <p>💻</p>
-        <p>Computer</p>
-        <p>Wins:</p>
-      </article>
-    </section>
-    <section class="middle-section">
-      <article class="titles">
-        <h1>Rock, Paper, Scissors</h1>
-      </article>
-      <article>
-        <h2>Choose your game!</h2>
-      </article>
-      <article class="classic-section">
-        <button name="classic-mode">
-          <h3>Classic</h3>
-          <p>rock > scissors</p>
-          <p>paper > rock</p>
-          <p>scissors > paper</p>
-        </button>
-      </article>
-      <article class="difficuly-section">
-        <button name='difficult-mode'>
-        <h3>Difficult</h3>
-        <p>rock > scissors & lizard</p>
-        <p>paper > rock & alien</p>
-        <p>scissors > paper & lizard</p>
-        <p>lizard > paper & alien</p>
-        <p>alien > scissors & rock</p>
-        </button>
-      </article>
+    <section class="all-sections">
+      <section class="left-side">
+        <div class="player-section">
+          <p>👨</p>
+          <p>Human</p>
+          <p>Wins:</p>
+        </div>
+      </section>
+      <section class="central-section">
+        <div>
+          <article class="title">
+            <h1>Rock, Paper, Scissors</h1>
+          </article>
+          <article class="choose-game">
+            <h2>Choose your game!</h2>
+          </article>
+          <article class="classic-section">
+            <button class="clasic-mode">
+              <h3>Classic</h3>
+              <p>rock > scissors</p>
+              <p>paper > rock</p>
+              <p>scissors > paper</p>
+            </button>
+          </article>
+          <article class="difficult-section">
+            <button class='difficult-mode'>
+              <h3>Difficult</h3>
+              <p>rock > scissors & lizard</p>
+              <p>paper > rock & alien</p>
+              <p>scissors > paper & lizard</p>
+              <p>lizard > paper & alien</p>
+              <p>alien > scissors & rock</p>
+            </button>
+          </article>
+        </div>
+      </section>
+      <section class="right-side">
+        <div class="computer-section">
+          <p>💻</p>
+          <p>Computer</p>
+          <p>Wins:</p>
+        </div>
+      </section>
     </section>
   </body>
 </html>
