Finish CSS positioning

--- a/index.html
+++ b/index.html
@@ -14,33 +14,45 @@
           <p>Human</p>
           <p>Wins:</p>
         </div>
+        <div class="change-game">
+          <button class="change-game-button">Change Game?</button>
+        </div>
       </section>
       <section class="central-section">
         <div>
-          <article class="title">
-            <h1>Rock, Paper, Scissors</h1>
-          </article>
-          <article class="choose-game">
-            <h2>Choose your game!</h2>
-          </article>
-          <article class="classic-section">
-            <button class="clasic-mode">
-              <h3>Classic</h3>
-              <p>rock > scissors</p>
-              <p>paper > rock</p>
-              <p>scissors > paper</p>
-            </button>
-          </article>
-          <article class="difficult-section">
-            <button class='difficult-mode'>
-              <h3>Difficult</h3>
-              <p>rock > scissors & lizard</p>
-              <p>paper > rock & alien</p>
-              <p>scissors > paper & lizard</p>
-              <p>lizard > paper & alien</p>
-              <p>alien > scissors & rock</p>
-            </button>
-          </article>
+          <div class="center">
+            <article class="title">
+              <h1>Rock, Paper, Scissors</h1>
+              <h2>Choose your game!</h2>
+            </article>
+          </div>
+          <div class="center">
+            <article class="classic-section">
+              <button class="clasic-mode">
+                <h3>Classic</h3>
+                <p>rock > scissors</p>
+                <p>paper > rock</p>
+                <p>scissors > paper</p>
+              </button>
+            </article>
+          </div>
+          <div class="choices hidden">
+            <img src="assets/happy-rocks.png" alt="happy rock">
+            <img src="assets/happy-paper.png" alt="happy paper">
+            <img src="assets/happy-scissors.png" alt="happy scissors">
+          </div>
+          <div class="center">
+            <article class="difficult-section">
+              <button class='difficult-mode'>
+                <h3>Difficult</h3>
+                <p>rock > scissors & lizard</p>
+                <p>paper > rock & alien</p>
+                <p>scissors > paper & lizard</p>
+                <p>lizard > paper & alien</p>
+                <p>alien > scissors & rock</p>
+              </button>
+            </article>
+          </div>
         </div>
       </section>
       <section class="right-side">
