Setup player.js file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Rock Paper Scissors</title>
     <link href="styles.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Kalam&family=Passion+One&display=swap" rel="stylesheet">
   </head>
   <body>
     <section class="all-sections">
@@ -36,10 +37,17 @@
               </button>
             </article>
           </div>
-          <div class="choices hidden">
+          <div class="classic-choices hidden">
             <img src="assets/happy-rocks.png" alt="happy rock">
             <img src="assets/happy-paper.png" alt="happy paper">
             <img src="assets/happy-scissors.png" alt="happy scissors">
+          </div>
+          <div class="difficult-choices hidden">
+            <img src="assets/happy-rocks.png" alt="happy rock">
+            <img src="assets/happy-paper.png" alt="happy paper">
+            <img src="assets/happy-scissors.png" alt="happy scissors">
+            <img src="assets/happy-alien.png" alt="happy alien">
+            <img src="assets/lizard.png" alt="happy lizard">
           </div>
           <div class="center">
             <article class="difficult-section">
