--- a/index.html
+++ b/index.html
@@ -75,5 +75,8 @@
         </div>
       </section>
     </section>
+    <script src="player.js"></script>
+    <script src="game.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
