Setup main.js file

--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
         <div class="player-section">
           <p>👨</p>
           <p>Human</p>
-          <p>Wins:</p>
+          <p class="human-wins-counter">Wins:</p>
         </div>
         <div class="change-game">
-          <button class="change-game-button hidden">Change Game?</button>
+          <button class="change-game hidden">Change Game?</button>
         </div>
       </section>
       <section class="central-section">
         <div class="center">
-          <article class="title">
+          <section class="title">
             <h1>Rock, Paper, Scissors</h1>
             <h2>Choose your game!</h2>
             <h2 class=" choose-fighter hidden">Choose your fighter!</h2>
             <h2 class="human-wins hidden">👨 Human won this round! 👨</h2>
             <h2 class="computer-wins hidden">💻 Computer won this round! 💻</h2>
             <h2 class="game-draw hidden">😭 It's a draw! 😭</h2>
-          </article>
+          </section>
         </div>
         <div class="center">
-          <article class="classic-section">
+          <section class="classic-section">
             <button class="clasic-mode">
               <h3>Classic</h3>
               <br>
@@ -39,7 +39,7 @@
               <p>paper > rock</p>
               <p>scissors > paper</p>
             </button>
-          </article>
+          </section>
         </div>
         <div class="classic-choices hidden">
           <img src="assets/happy-rocks.png" alt="happy rock">
@@ -54,7 +54,7 @@
           <img src="assets/lizard.png" alt="happy lizard">
         </div>
         <div class="center">
-          <article class="difficult-section">
+          <section class="difficult-section">
             <button class='difficult-mode'>
               <h3>Difficult</h3>
               <br>
@@ -64,14 +64,14 @@
               <p>lizard > paper & alien</p>
               <p>alien > scissors & rock</p>
             </button>
-          </article>
+          </section>
         </div>
       </section>
       <section class="right-side">
         <div class="computer-section">
           <p>💻</p>
           <p>Computer</p>
-          <p>Wins:</p>
+          <p class="computer-wins-text">Wins:</p>
         </div>
       </section>
     </section>
