Create show/hide functionality

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
           <p class="human-wins-counter">Wins:</p>
         </div>
         <div class="change-game">
-          <button class="change-game hidden">Change Game?</button>
+          <button class="change-game-button hidden">Change Game?</button>
         </div>
       </section>
       <section class="central-section">
         <div class="center">
           <section class="title">
             <h1>Rock, Paper, Scissors</h1>
-            <h2>Choose your game!</h2>
+            <h2 class="choose-game">Choose your game!</h2>
             <h2 class=" choose-fighter hidden">Choose your fighter!</h2>
             <h2 class="human-wins hidden">👨 Human won this round! 👨</h2>
             <h2 class="computer-wins hidden">💻 Computer won this round! 💻</h2>
@@ -32,7 +32,7 @@
         </div>
         <div class="center">
           <section class="classic-section">
-            <button class="clasic-mode">
+            <button class="classic-mode buttons">
               <h3>Classic</h3>
               <br>
               <p>rock > scissors</p>
@@ -42,20 +42,20 @@
           </section>
         </div>
         <div class="classic-choices hidden">
-          <img src="assets/happy-rocks.png" alt="happy rock">
-          <img src="assets/happy-paper.png" alt="happy paper">
-          <img src="assets/happy-scissors.png" alt="happy scissors">
+          <img class="rock" src="assets/happy-rocks.png" alt="happy rock">
+          <img class="paper" src="assets/happy-paper.png" alt="happy paper">
+          <img class="scissors" src="assets/happy-scissors.png" alt="happy scissors">
         </div>
         <div class="difficult-choices hidden">
-          <img src="assets/happy-rocks.png" alt="happy rock">
-          <img src="assets/happy-paper.png" alt="happy paper">
-          <img src="assets/happy-scissors.png" alt="happy scissors">
-          <img src="assets/happy-alien.png" alt="happy alien">
-          <img src="assets/lizard.png" alt="happy lizard">
+          <img class="rock" src="assets/happy-rocks.png" alt="happy rock">
+          <img class="paper" src="assets/happy-paper.png" alt="happy paper">
+          <img class="scissors" src="assets/happy-scissors.png" alt="happy scissors">
+          <img class="alien" src="assets/happy-alien.png" alt="happy alien">
+          <img class="lizard" src="assets/lizard.png" alt="happy lizard">
         </div>
         <div class="center">
           <section class="difficult-section">
-            <button class='difficult-mode'>
+            <button class='difficult-mode buttons'>
               <h3>Difficult</h3>
               <br>
               <p>rock > scissors & lizard</p>
@@ -71,7 +71,7 @@
         <div class="computer-section">
           <p>💻</p>
           <p>Computer</p>
-          <p class="computer-wins-text">Wins:</p>
+          <p class="computer-wins-counter">Wins:</p>
         </div>
       </section>
     </section>
