Add player selected choices functionality

--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
           </section>
         </div>
         <div class="classic-choices hidden">
-          <img class="rock" src="assets/happy-rocks.png" alt="happy rock">
-          <img class="paper" src="assets/happy-paper.png" alt="happy paper">
-          <img class="scissors" src="assets/happy-scissors.png" alt="happy scissors">
+          <img class="classic rock" src="assets/happy-rocks.png" alt="happy rock">
+          <img class="classic paper" src="assets/happy-paper.png" alt="happy paper">
+          <img class="classic scissors" src="assets/happy-scissors.png" alt="happy scissors">
         </div>
         <div class="difficult-choices hidden">
-          <img class="rock" src="assets/happy-rocks.png" alt="happy rock">
-          <img class="paper" src="assets/happy-paper.png" alt="happy paper">
-          <img class="scissors" src="assets/happy-scissors.png" alt="happy scissors">
-          <img class="alien" src="assets/happy-alien.png" alt="happy alien">
-          <img class="lizard" src="assets/lizard.png" alt="happy lizard">
+          <img class="difficult rock" src="assets/happy-rocks.png" alt="happy rock">
+          <img class="difficult paper" src="assets/happy-paper.png" alt="happy paper">
+          <img class="difficult scissors" src="assets/happy-scissors.png" alt="happy scissors">
+          <img class="difficult alien" src="assets/happy-alien.png" alt="happy alien">
+          <img class="difficult lizard" src="assets/lizard.png" alt="happy lizard">
         </div>
         <div class="center">
           <section class="difficult-section">
