Fix duplicated icon bug

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="player-section">
           <p>👨</p>
           <p>Human</p>
-          <p class="human-wins-counter">Wins:</p>
+          <p class="human-wins-counter">Wins: 0</p>
         </div>
         <div class="change-game">
           <button class="change-game-button hidden">Change Game?</button>
@@ -42,17 +42,19 @@
           </section>
         </div>
         <div class="classic-choices hidden">
-          <img class="classic rock" src="assets/happy-rocks.png" alt="happy rock">
-          <img class="classic paper" src="assets/happy-paper.png" alt="happy paper">
-          <img class="classic scissors" src="assets/happy-scissors.png" alt="happy scissors">
+          <img class="rock" src="assets/happy-rocks.png" alt="happy rock">
+          <img class="paper" src="assets/happy-paper.png" alt="happy paper">
+          <img class="scissors" src="assets/happy-scissors.png" alt="happy scissors">
+          <img class="alien" src="assets/happy-alien.png" alt="happy alien">
+          <img class="lizard" src="assets/lizard.png" alt="happy lizard">
         </div>
-        <div class="difficult-choices hidden">
+        <!-- <div class="difficult-choices hidden">
           <img class="difficult rock" src="assets/happy-rocks.png" alt="happy rock">
           <img class="difficult paper" src="assets/happy-paper.png" alt="happy paper">
           <img class="difficult scissors" src="assets/happy-scissors.png" alt="happy scissors">
           <img class="difficult alien" src="assets/happy-alien.png" alt="happy alien">
           <img class="difficult lizard" src="assets/lizard.png" alt="happy lizard">
-        </div>
+        </div> -->
         <div class="center">
           <section class="difficult-section">
             <button class='difficult-mode buttons'>
@@ -71,7 +73,7 @@
         <div class="computer-section">
           <p>💻</p>
           <p>Computer</p>
-          <p class="computer-wins-counter">Wins:</p>
+          <p class="computer-wins-counter">Wins: 0</p>
         </div>
       </section>
     </section>
