Utilize Id's to render icons

--- a/index.html
+++ b/index.html
@@ -42,19 +42,12 @@
           </section>
         </div>
         <div class="classic-choices hidden">
-          <img class="rock" src="assets/happy-rocks.png" alt="happy rock">
-          <img class="paper" src="assets/happy-paper.png" alt="happy paper">
-          <img class="scissors" src="assets/happy-scissors.png" alt="happy scissors">
-          <img class="alien" src="assets/happy-alien.png" alt="happy alien">
-          <img class="lizard" src="assets/lizard.png" alt="happy lizard">
+          <img id="rock" src="assets/happy-rocks.png" alt="happy rock">
+          <img id="paper" src="assets/happy-paper.png" alt="happy paper">
+          <img id="scissors" src="assets/happy-scissors.png" alt="happy scissors">
+          <img id="alien" src="assets/happy-alien.png" alt="happy alien">
+          <img id="lizard" src="assets/lizard.png" alt="happy lizard">
         </div>
-        <!-- <div class="difficult-choices hidden">
-          <img class="difficult rock" src="assets/happy-rocks.png" alt="happy rock">
-          <img class="difficult paper" src="assets/happy-paper.png" alt="happy paper">
-          <img class="difficult scissors" src="assets/happy-scissors.png" alt="happy scissors">
-          <img class="difficult alien" src="assets/happy-alien.png" alt="happy alien">
-          <img class="difficult lizard" src="assets/lizard.png" alt="happy lizard">
-        </div> -->
         <div class="center">
           <section class="difficult-section">
             <button class='difficult-mode buttons'>
