Add player choice functionality

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </button>
           </section>
         </div>
-        <div class="classic-choices hidden">
+        <div class="player-choices hidden">
           <img id="rock" src="assets/happy-rocks.png" alt="happy rock">
           <img id="paper" src="assets/happy-paper.png" alt="happy paper">
           <img id="scissors" src="assets/happy-scissors.png" alt="happy scissors">
