Reset board after displaying winner functionality

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
           <section class="title">
             <h1>Rock, Paper, Scissors</h1>
             <h2 class="choose-game">Choose your game!</h2>
-            <h2 class=" choose-fighter hidden">Choose your fighter!</h2>
-            <h2 class="human-wins hidden">👨 Human won this round! 👨</h2>
-            <h2 class="computer-wins hidden">💻 Computer won this round! 💻</h2>
-            <h2 class="game-draw hidden">😭 It's a draw! 😭</h2>
+            <h2 class=" choose-fighter banner hidden">Choose your fighter!</h2>
+            <h2 class="human-wins hidden banner">👨 Human won this round! 👨</h2>
+            <h2 class="computer-wins hidden banner">💻 Computer won this round! 💻</h2>
+            <h2 class="game-draw hidden banner">😭 It's a draw! 😭</h2>
           </section>
         </div>
         <div class="center">
