Display text for Tie Game

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h2 class=" choose-fighter banner hidden">Choose your fighter!</h2>
             <h2 class="human-wins hidden banner">👨 Human won this round! 👨</h2>
             <h2 class="computer-wins hidden banner">💻 Computer won this round! 💻</h2>
-            <h2 class="game-draw hidden banner">😭 It's a draw! 😭</h2>
+            <h2 class="game-draw hidden banner">😭 It's a draw! 😭 <br><br> You Both Selected:</h2>
           </section>
         </div>
         <div class="center">
