Correct difficult icons display

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
       </section>
       <section class="central-section">
-        <div class="center">
+        <div>
           <section class="title">
             <h1>Rock, Paper, Scissors</h1>
             <h2 class="choose-game">Choose your game!</h2>
@@ -30,7 +30,7 @@
             <h2 class="game-draw hidden banner">😭 It's a draw! 😭 </h2>
           </section>
         </div>
-        <div class="center">
+        <div>
           <section class="classic-section">
             <button class="classic-mode buttons">
               <h3>Classic</h3>
@@ -42,21 +42,19 @@
           </section>
         </div>
         <div class="rendered-choices-area">
-          <div class="human-choice">
-
-          </div>
-          <div class="computer-choice">
-
-          </div>
+          <section class="human-choice">
+          </section>
+          <section class="computer-choice">
+          </section>
         </div>
         <div class="player-choices hidden">
-          <img id="rock" src="assets/happy-rock.png" alt="happy rock">
-          <img id="paper" src="assets/happy-paper.png" alt="happy paper">
-          <img id="scissors" src="assets/happy-scissors.png" alt="happy scissors">
-          <img id="alien" src="assets/happy-alien.png" alt="happy alien">
-          <img id="lizard" src="assets/happy-lizard.png" alt="happy lizard">
+          <img class="hoverable" id="rock" src="assets/happy-rock.png" alt="happy rock">
+          <img class="hoverable" id="paper" src="assets/happy-paper.png" alt="happy paper">
+          <img class="hoverable" id="scissors" src="assets/happy-scissors.png" alt="happy scissors">
+          <img class="hoverable" id="alien" src="assets/happy-alien.png" alt="happy alien">
+          <img class="hoverable" id="lizard" src="assets/happy-lizard.png" alt="happy lizard">
         </div>
-        <div class="center">
+        <div>
           <section class="difficult-section">
             <button class='difficult-mode buttons'>
               <h3>Difficult</h3>
