Add sections to CSS and alphabetize rules

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
           </section>
         </div>
         <div class="player-choices hidden">
-          <img class="choice-icon hoverable" id="rock" src="assets/happy-rock.png" alt="happy rock">
-          <img class="choice-icon hoverable" id="paper" src="assets/happy-paper.png" alt="happy paper">
-          <img class="choice-icon hoverable" id="scissors" src="assets/happy-scissors.png" alt="happy scissors">
-          <img class="choice-icon hoverable" id="alien" src="assets/happy-alien.png" alt="happy alien">
-          <img class="choice-icon hoverable" id="lizard" src="assets/happy-lizard.png" alt="happy lizard">
+          <img class="choice-icon hoverable clickable" id="rock" src="assets/happy-rock.png" alt="happy rock">
+          <img class="choice-icon hoverable clickable" id="paper" src="assets/happy-paper.png" alt="happy paper">
+          <img class="choice-icon hoverable clickable" id="scissors" src="assets/happy-scissors.png" alt="happy scissors">
+          <img class="choice-icon hoverable clickable" id="alien" src="assets/happy-alien.png" alt="happy alien">
+          <img class="choice-icon hoverable clickable" id="lizard" src="assets/happy-lizard.png" alt="happy lizard">
         </div>
         <div>
           <section class="difficult-section">
