Add reeset score button with functionality

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <section class="left-side">
         <div class="player-section">
           <p>👨</p>
-          <p>Human</p>
+          <p class="player-title">Human</p>
           <p class="human-wins-counter">Wins: 0</p>
         </div>
         <div class="change-game">
@@ -71,8 +71,11 @@
       <section class="right-side">
         <div class="computer-section">
           <p>💻</p>
-          <p>Computer</p>
+          <p class="player-title">Computer</p>
           <p class="computer-wins-counter">Wins: 0</p>
+        </div>
+        <div class="reset-game">
+          <button class="reset-game-button hidden">Reset Scores?</button>
         </div>
       </section>
     </section>
