Disable reset-button when both scores are zero

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <p class="computer-wins-counter">Wins: 0</p>
         </div>
         <div class="reset-game">
-          <button class="reset-game-button hidden">Reset Scores?</button>
+          <button class="reset-game-button hidden disabled">Reset Scores?</button>
         </div>
       </section>
     </section>
