Hid change-game-button during game winner check

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <section class="all-sections">
       <section class="left-side">
         <div class="player-section">
-          <p>👨</p>
-          <p class="player-title">Human</p>
+          <p>😃</p>
+          <p class="player-title">You</p>
           <p class="human-wins-counter">Wins: 0</p>
         </div>
         <div class="change-game">
@@ -25,7 +25,7 @@
             <h1>Rock, Paper, Scissors</h1>
             <h2 class="choose-game">Choose your game!</h2>
             <h2 class=" choose-fighter banner hidden">Choose your fighter!</h2>
-            <h2 class="human-wins hidden banner">👨 Human won this round! 👨</h2>
+            <h2 class="human-wins hidden banner">😃 You won this round! 😃</h2>
             <h2 class="computer-wins hidden banner">💻 Computer won this round! 💻</h2>
             <h2 class="game-draw hidden banner">😭 It's a draw! 😭 </h2>
           </section>
