Increase player token size

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <section class="all-sections">
       <section class="left-side">
         <div class="player-section">
-          <p>😃</p>
+          <p class="human-icon">😃</p>
           <p class="player-title">You</p>
           <p class="human-wins-counter">Wins: 0</p>
         </div>
-        <div class="change-game">
+        <div>
           <button class="change-game-button hidden">Change Game?</button>
         </div>
       </section>
@@ -31,7 +31,7 @@
           </section>
         </div>
         <div>
-          <section class="classic-section">
+          <section>
             <button class="classic-mode buttons">
               <h3>Classic</h3>
               <br>
@@ -55,7 +55,7 @@
           <img class="choice-icon hoverable clickable" id="lizard" src="assets/happy-lizard.png" alt="happy lizard">
         </div>
         <div>
-          <section class="difficult-section">
+          <section>
             <button class='difficult-mode buttons'>
               <h3>Difficult</h3>
               <br>
@@ -70,7 +70,7 @@
       </section>
       <section class="right-side">
         <div class="computer-section">
-          <p>💻</p>
+          <p class="computer-icon">💻</p>
           <p class="player-title">Computer</p>
           <p class="computer-wins-counter">Wins: 0</p>
         </div>
